--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "strapi-provider-upload-minio-ce",
-  "version": "1.0.5",
-  "description": "minio provider for strapi ce 3.6.8 and 4.0.0",
-  "main": "index.js", 
+  "version": "1.1.0",
+  "description": "minio provider for strapi ce 3.6.x and 4.x",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/flyce/strapi-provider-upload-minio-ce#readme",
   "dependencies": {
-    "minio": "^7.0.19"
+    "mime-types": "2.1.35",
+    "minio": "7.0.19"
   }
 }
